# tet-cpp-client

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: FindTET_CPPSDK.cmake
include/: gazeapi.h  gazeapi_interfaces.h  gazeapi_types.h
src/: gazeapi.cpp  gazeapi_observable.hpp  gazeapi_parser.cpp  gazeapi_parser.hpp  gazeapi_socket.cpp  gazeapi_socket.hpp
